# nanoHEAT

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: Promote.yml
examples/: CMakeLists.txt
examples/kicad/: JetsonNano.cpp  TinyTapeOut.cpp
src/: CMakeLists.txt  NanoHEAT.cpp  NanoHEAT.h
src/basic/: NSHeatAlias.hpp  NSHeatCommon.hpp
src/model/: CMakeLists.txt  NSModel.cpp  NSModel.h  NSModelLayerStackup.cpp  NSModelLayerStackup.h  NSModelPrismStackupThermal.cpp  NSModelPrismStackupThermal.h  NSModelPrismThermal.cpp  NSModelPrismThermal.h  NSModelTraits.hpp
src/model/utils/: NSModelLayerStackupBuilder.cpp  NSModelLayerStackupBuilder.h  NSModelLayerStackupQuery.cpp  NSModelLayerStackupQuery.h  NSModelLayoutPolygonMerger.cpp  NSModelLayoutPolygonMerger.h  NSModelPrismMeshGenerator.h  NSModelPrismStackupThermalBuilder.cpp  NSModelPrismStackupThermalBuilder.h  NSModelPrismStackupThermalQuery.cpp  NSModelPrismStackupThermalQuery.h  NSModelPrismThermalBuilder.cpp  NSModelPrismThermalBuilder.h  NSModelPrismThermalQuery.cpp  NSModelPrismThermalQuery.h
src/simulation/: CMakeLists.txt  NSSimulationPrismThermal.cpp  NSSimulationPrismThermal.h
src/solver/: CMakeLists.txt  NSSolverPrismThermalNetwork.cpp  NSSolverPrismThermalNetwork.h
src/solver/network/: NSThermalNetwork.hpp  NSThermalNetworkSolver.hpp
src/solver/utils/: NSPrismStackupThermalNetworkBuilder.cpp  NSPrismThermalNetworkBuilder.cpp  (+2 more)
test/: CMakeLists.txt  TestCommon.hpp  TestModel.hpp  TestPackage.hpp  TestSimulation.hpp  TestSolver.hpp  UnitTest.cpp
tools/: project-words.txt
(+3 files in other folders)
